test/regression/src/test/idl/compiler/fail/Long_Fail2.idl

module org
{
   module jacorb
   {
      module test
      {
         module idl
         {
            module Longs
            {
               const long long UnsignedValue2 = 18446744073709551615;
            };
         };
      };
   };
};
